--- a/index.html
+++ b/index.html
@@ -180,24 +180,27 @@
       </section>
 
       <section id="Internship" class="section Internship" id="Internship">
-        <h2 class="section__title">Certifications</h2>
+        <h2 class="section__title">Interships And Certifications</h2>
 
       <div class="project">
-        <h3>Open Weaver</h3>
+        <h3>Full Stack Web Development</h3>
+        <i>Diginique TechLabs & iHUB DivyaSampark at IIT Roorkee</i>
         <p class="project__description">
-          Developed several model using the prototype kit called KANDI.
+          Completed a comprehensive internship in Full Stack Web Development, gaining valuable experience and mentorship. Ready to apply these skills in future projects and collaborations.
         </p>
         <ul class="project__stack">
-          <li class="project__stack-item">Python</li>
-          <li class="project__stack-item">Gen -Ai</li>
-          <li class="project__stack-item">Machine Learning</li>
+          <li class="project__stack-item">HTML</li>
+          <li class="project__stack-item">CSS</li>
+          <li class="project__stack-item">JavaScript</li>
+          <li class="project__stack-item">React</li>
+          <li class="project__stack-item">MongoDB</li>
+          <li class="project__stack-item">NodeJS</li>
         </ul>
 
-        <a
+        <!-- <a
           href=""  
           aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-          class="link link--icon"
-        > <!-- Include the certification links and  -->
+          class="link link--icon">  Include the certification links and  
           <i aria-hidden="true" class="fab fa-github"></i>
         </a>
         <a
@@ -206,10 +209,97 @@
           class="link link--icon"
         >
           <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-        </a>
+        </a> -->
       </div>
     </div>
   </section>
+  <section id="Internship" class="section Internship" id="Internship">
+
+  <div class="project">
+    <h3>Machine Learning Using Python </h3>
+    <i>SimpliLearn</i>
+    <p class="project__description">Earned a certification in Machine Learning with Python, gaining skills in machine learning algorithms, data analysis, and Python programming. Excited to apply this expertise in my professional journey.
+    </p>
+    <ul class="project__stack">
+      <li class="project__stack-item">Python</li>
+      <li class="project__stack-item">Data Analysis</li>
+      <li class="project__stack-item">Machine Learning</li>
+    </ul>
+
+    <!-- <a
+      href=""  
+      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
+      class="link link--icon">  Include the certification links and  
+      <i aria-hidden="true" class="fab fa-github"></i>
+    </a>
+    <a
+      href="https://example.com"
+      aria-label="live preview"
+      class="link link--icon"
+    >
+      <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+    </a> -->
+  </div>
+</div>
+</section>
+<section id="Internship" class="section Internship" id="Internship">
+
+  <div class="project">
+    <h3> HTML5 Application Development Fundamentals </h3>
+    <i>Infosys</i>
+    <p class="project__description">Completed a course in HTML5 application development, acquiring essential skills for building dynamic and interactive web applications.
+    </p>
+    <ul class="project__stack">
+      <li class="project__stack-item">HTML</li>
+      <li class="project__stack-item">CSS</li>
+     
+    </ul>
+
+    <!-- <a
+      href=""  
+      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
+      class="link link--icon">  Include the certification links and  
+      <i aria-hidden="true" class="fab fa-github"></i>
+    </a>
+    <a
+      href="https://example.com"
+      aria-label="live preview"
+      class="link link--icon"
+    >
+      <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+    </a> -->
+  </div>
+</div>
+</section>
+
+<section id="Internship" class="section Internship" id="Internship">
+
+  <div class="project">
+    <h3>Basics of Python</h3>
+    <i>Infosys </i>
+    <p class="project__description">Completed a course in Python basics, gaining fundamental skills in Python programming for various applications.
+    </p>
+    <ul class="project__stack">
+      <li class="project__stack-item">Python</li>
+    </ul>
+
+    <!-- <a
+      href=""  
+      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
+      class="link link--icon">  Include the certification links and  
+      <i aria-hidden="true" class="fab fa-github"></i>
+    </a>
+    <a
+      href="https://example.com"
+      aria-label="live preview"
+      class="link link--icon"
+    >
+      <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+    </a> -->
+  </div>
+</div>
+</section>
+
 
  <!-- duplicate the above section and you can change it to paper or experience-->
 
