--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="link link--nav" href="#skills">Skills</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="#Internship">Internship</a>
+            <a class="link link--nav" href="#Internship">Internships </a>
           </li>
           <!--   <li class="nav__list-item">
             <a class="link link--nav" href="#Exp">Experience</a>
@@ -275,6 +275,34 @@
 <section id="Internship" class="section Internship" id="Internship">
 
   <div class="project">
+    <h3>AWS Academy Cloud Foundations</h3>
+    <i>Amazon Web Services Training And Certification</i>
+    <p class="project__description">      
+      Completed a course in Amazon Cloud Foundation, covering essential AWS cloud concepts, services, architecture, and security practices. Looking forward to advancing in the field of cloud computing.
+    </p>
+    <ul class="project__stack">
+      <li class="project__stack-item">AWS</li>
+    </ul>
+
+    <!-- <a
+      href=""  
+      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
+      class="link link--icon">  Include the certification links and  
+      <i aria-hidden="true" class="fab fa-github"></i>
+    </a>
+    <a
+      href="https://example.com"
+      aria-label="live preview"
+      class="link link--icon"
+    >
+      <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+    </a> -->
+  </div>
+</div>
+</section>
+<section id="Internship" class="section Internship" id="Internship">
+
+  <div class="project">
     <h3>Basics of Python</h3>
     <i>Infosys </i>
     <p class="project__description">Completed a course in Python basics, gaining fundamental skills in Python programming for various applications.
@@ -299,11 +327,7 @@
   </div>
 </div>
 </section>
-
-
- <!-- duplicate the above section and you can change it to paper or experience-->
-
-      
+     
       <!-- Skills -->
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
@@ -321,6 +345,10 @@
           <li class="skills__list-item btn btn--plain">MySQL</li>
           <li class="skills__list-item btn btn--plain">MongoDB</li>
           <li class="skills__list-item btn btn--plain">Node.js</li>
+          <li class="skills__list-item btn btn--plain">Colab</li>
+          <li class="skills__list-item btn btn--plain">Jupyter Notebook</li>
+          <li class="skills__list-item btn btn--plain">AWS</li>
+          <li class="skills__list-item btn btn--plain">GCP</li>
         </ul>
       </section>
 
@@ -329,7 +357,7 @@
         href="" 
         class="link footer__link"
       >  
-        Created By Shubhi Jain!<!-- edit it to your name -->
+        Created By Shubhi Jain!
       </a>
     </footer>
 
