--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1>Hi, I am <span class="about__name">Shubhi Jain.</span></h1>
         <h2 class="about__role">Aspiring Web Developer</h2>
         <p class="about__desc"> 
-          I'm Shubhi Jain, a final-year BCA student at Christ University Bangalore with a passion for technology and web development. My analytical skills drive me to craft innovative solutions, and I thrive in team environments where diverse perspectives come together. 
+          I'm Shubhi Jain, a final-year Bachelor of Computer Applications (BCA) student at CHRIST (Deemed to be University), Bengaluru, with a passion for web development and data analysis. I'm a quick learner, always eager to explore new technologies and take on challenges. My strong analytical skills help me develop innovative solutions, and I excel in collaborative settings. As an active member of the Computer Science Association, I thrive in working with others to achieve shared goals.
         </p> 
         <br>
         <a href="mailto:shubhij0307@gmail.com ">Mail: shubhij0307@gmail.com </a><p> Contact: +91 9424199622</p> 
@@ -123,59 +123,6 @@
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
-
-          <!-- <div class="project">
-            <h3>Drone Detection - YOLO v8</h3>
-            <p class="project__description">
-              An image Classification model using YOLO, which is trained on custom dataset
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">Python</li>
-              <li class="project__stack-item">YOLO v8</li>
-            </ul>
-
-            <a
-              href="https://github.com/ashiksanyo10/DroneXYOLOv8" target="_blank"
-              aria-label="https://github.com/ashiksanyo10/DroneXYOLOv8" target="_blank"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div> -->
-
-          <!-- <div class="project">
-            <h3>PowerBI Dashboards</h3>
-            <p class="project__description">
-              Developed a Business Intelligence portfolio with real-case reports showcasing data analysis expertise.
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">PowerBI</li>
-              <li class="project__stack-item">SQL</li>
-              <li class="project__stack-item">Excel</li>
-            </ul>
-
-            <a
-              href="https://www.novypro.com/profile_projects/ashiksanyo" target="_blank"
-              aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div> -->
         </div>
       </section>
 
@@ -197,19 +144,9 @@
           <li class="project__stack-item">NodeJS</li>
         </ul>
 
-        <!-- <a
-          href=""  
-          aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-          class="link link--icon">  Include the certification links and  
-          <i aria-hidden="true" class="fab fa-github"></i>
-        </a>
-        <a
-          href="https://example.com"
-          aria-label="live preview"
-          class="link link--icon"
-        >
+         <a href="https://www.linkedin.com/in/shubhijain03/details/certifications/"  aria-label="live preview"  class="link link--icon" >
           <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-        </a> -->
+        </a> 
       </div>
     </div>
   </section>
@@ -225,20 +162,9 @@
       <li class="project__stack-item">Data Analysis</li>
       <li class="project__stack-item">Machine Learning</li>
     </ul>
-
-    <!-- <a
-      href=""  
-      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-      class="link link--icon">  Include the certification links and  
-      <i aria-hidden="true" class="fab fa-github"></i>
-    </a>
-    <a
-      href="https://example.com"
-      aria-label="live preview"
-      class="link link--icon"
-    >
+    <a href="https://www.linkedin.com/in/shubhijain03/details/certifications/"  aria-label="live preview"  class="link link--icon" >
       <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-    </a> -->
+    </a> 
   </div>
 </div>
 </section>
@@ -255,19 +181,9 @@
      
     </ul>
 
-    <!-- <a
-      href=""  
-      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-      class="link link--icon">  Include the certification links and  
-      <i aria-hidden="true" class="fab fa-github"></i>
-    </a>
-    <a
-      href="https://example.com"
-      aria-label="live preview"
-      class="link link--icon"
-    >
+    <a href="https://www.linkedin.com/in/shubhijain03/details/certifications/"  aria-label="live preview"  class="link link--icon" >
       <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-    </a> -->
+    </a>
   </div>
 </div>
 </section>
@@ -284,19 +200,9 @@
       <li class="project__stack-item">AWS</li>
     </ul>
 
-    <!-- <a
-      href=""  
-      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-      class="link link--icon">  Include the certification links and  
-      <i aria-hidden="true" class="fab fa-github"></i>
-    </a>
-    <a
-      href="https://example.com"
-      aria-label="live preview"
-      class="link link--icon"
-    >
+    <a href="https://www.credly.com/badges/ee15dc2c-aa73-481b-b98a-463499d3dada"  aria-label="live preview"  class="link link--icon" >
       <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-    </a> -->
+    </a>
   </div>
 </div>
 </section>
@@ -311,19 +217,9 @@
       <li class="project__stack-item">Python</li>
     </ul>
 
-    <!-- <a
-      href=""  
-      aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
-      class="link link--icon">  Include the certification links and  
-      <i aria-hidden="true" class="fab fa-github"></i>
-    </a>
-    <a
-      href="https://example.com"
-      aria-label="live preview"
-      class="link link--icon"
-    >
+    <a href="https://www.linkedin.com/in/shubhijain03/details/certifications/"  aria-label="live preview"  class="link link--icon" >
       <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-    </a> -->
+    </a>
   </div>
 </div>
 </section>
