--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       
 
         <div class="about__contact center">
-          <a href="#" target="_blank"  > <!-- drive link for resume-->
+          <a href="https://drive.google.com/file/d/18k2aykeHzbodivR-CEGy_g2qXDMnF2Pf/view?usp=drive_link" target="_blank"  >
             <span class="btn btn--outline">Resume</span> 
           </a>
 
